package com.harmellaw;

public class Defendant {
}
