package com.harmellaw.investigation;

public class Suspect {

    private final CriminalOffence offence;

    public Suspect(CriminalOffence offence) {
        this.offence = offence;
    }
    
}
