@startuml
hide empty members
hide empty methods

package investigation {

    class PreChargeDecisionService {
        PreChargeDecisionCase receiveRequestForPreChargeDecision (PoliceInvestigation)
    }

    class CriminalOffence {
    }

    class OffenceAdvice {
    }

    class PoliceInvestigationDetails {
    }

    class PreChargeDecisionCase {
        void recordAlternativeOffenceAdvice (Suspect, OffenceAdvice)
        OffenceAdvice getOffenceAdviceFor (Suspect)
    }

    class Suspect    {
    }

}

package preparation{

    class TrialPreparationService {
        CriminalCase acceptCaseFile (PoliceCaseFile)
    }

    class CriminalCase {
    }

    class Defendant {
    }

    class PoliceCaseFile {
    }
}

class PNCId {
}

Suspect *-- "*" CriminalOffence

PoliceCaseFile *-- PNCId

PoliceCaseFile *-- Defendant

PoliceInvestigationDetails *-- "*" Suspect

PoliceInvestigationDetails *-- PNCId

PreChargeDecisionCase *-- "*" Suspect

PreChargeDecisionCase *-- "*" PNCId

PreChargeDecisionCase *-- "*" OffenceAdvice

CriminalCase *-- PNCId

CriminalCase *-- "*" Defendant

PreChargeDecisionService --> PreChargeDecisionCase : <<creates>>

PreChargeDecisionService --> PoliceInvestigationDetails : <<uses>>

TrialPreparationService --> CriminalCase : <<creates>>

TrialPreparationService --> PoliceCaseFile : <<uses>>
@enduml
